# c_regex

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  regex.c  regex.h  test.c  test_regex
